--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
+  <!-- Added the following 4 lines -->
+  <script>
+    window.global = window;
+    var exports = {};
+  </script>
 </body>
 
 </html>
